feat: feature section animation

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "astro": "^5.13.0",
     "astro-i18n-aut": "^0.7.3",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "i18next": "^25.3.6",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
