--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/sitemap": "^3.5.0",
     "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-slot": "^1.2.3",
     "@splinetool/react-spline": "^4.1.0",
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.10",
@@ -23,8 +24,10 @@
     "ahooks": "^3.9.0",
     "astro": "^5.13.0",
     "astro-i18n-aut": "^0.7.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "embla-carousel-react": "^8.6.0",
     "i18next": "^25.3.6",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
@@ -34,5 +37,8 @@
     "tailwindcss": "^4.1.12",
     "tailwindcss-animate": "^1.0.7",
     "ts-morph": "^26.0.0"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.3.8"
   }
 }
