--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "astro": "astro",
     "formate-i18n": "node scripts/add-default-value.js",
     "build:gh": "GITHUB_PAGES=true astro build",
-    "gh": "GITHUB_PAGES=true astro build && npx gh-pages -d dist"
+    "gh": "GITHUB_PAGES=true astro build && npx gh-pages -d dist",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "format:staged": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.3",
@@ -26,8 +29,8 @@
     "astro-i18n-aut": "^0.7.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "gsap": "^3.13.0",
     "embla-carousel-react": "^8.6.0",
+    "gsap": "^3.13.0",
     "i18next": "^25.3.6",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
@@ -39,6 +42,9 @@
     "ts-morph": "^26.0.0"
   },
   "devDependencies": {
+    "prettier": "^3.6.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tw-animate-css": "^1.3.8"
   }
 }
